--- a/admin-service/.env
+++ b/admin-service/.env
@@ -3,4 +3,4 @@
 # Copy this file to .env and update the values
 
 # Django Backend API URL (your Render backend URL)
-VITE_API_BASE_URL=https://final-shopsphere-2-jeoy.onrender.com
+VITE_API_BASE_URL=https://final-shopsphere-8v1c.onrender.com/
